# DoRobot

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
common/: coordinator.py  daemon.py
libraries/core/: Cargo.toml
libraries/pipeline/: Cargo.toml
libraries/pipeline/src/: config.rs  format.rs  lib.rs
libraries/utils/: Cargo.toml
libraries/utils/src/: lib.rs
tests/: test_aloha_lerobot.yml  test_numpy.py  test_zeromq.py  test_zeromq_image.py
tests/load_dora/: Cargo.toml
tests/load_dora/dataflow/: config.json  config.toml  template.yml
tests/load_dora/src/: main.rs
