[workspace]
resolver = "2"
members = [
    "apis/rust",
    "apis/python",

    "ui",

    "binaries/cli",

    "libraries/core",
    "libraries/pipeline",

    "tests/load_dora", "libraries/utils", 
]

[workspace.package]
edition = "2024"
rust-version = "1.89.0"
version = "0.0.1"
description = "DoRobot: A Containerized, Visualized, and Modular Embodied AI Operating System"
documentation = "https://github.com/DoRobot-Project"
readme = "./README.md"
license = "Apache-2.0"
repository = "https://github.com/DoRobot-Project/DoRobot"

[workspace.dependencies]
utils = { path = "libraries/utils" }
d-pipeline = { path = "libraries/pipeline" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
prost = "0.11"
tonic = "0.8"

