[package]
name = "d-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
readme.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
utils = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"